pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
spec:
  selector:
    app: pacman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
